La - Estruturando e montando o ambiente de front end

--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -89,9 +89,39 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Content\bootstrap.css" />
-    <Content Include="Content\bootstrap.min.css" />
-    <Content Include="Content\Site.css" />
+    <Content Include="Content\config\js\aos.js" />
+    <Content Include="Content\config\js\bootstrap-datepicker.js" />
+    <Content Include="Content\config\js\bootstrap.min.js" />
+    <Content Include="Content\config\js\google-map.js" />
+    <Content Include="Content\config\js\jquery-3.2.1.min.js" />
+    <Content Include="Content\config\js\jquery-migrate-3.0.1.min.js" />
+    <Content Include="Content\config\js\jquery.animateNumber.min.js" />
+    <Content Include="Content\config\js\jquery.easing.1.3.js" />
+    <Content Include="Content\config\js\jquery.magnific-popup.min.js" />
+    <Content Include="Content\config\js\jquery.min.js" />
+    <Content Include="Content\config\js\jquery.stellar.min.js" />
+    <Content Include="Content\config\js\jquery.timepicker.min.js" />
+    <Content Include="Content\config\js\jquery.waypoints.min.js" />
+    <Content Include="Content\config\js\main.js" />
+    <Content Include="Content\config\js\owl.carousel.min.js" />
+    <Content Include="Content\config\js\popper.min.js" />
+    <Content Include="Content\images\bg_1.jpg" />
+    <Content Include="Content\images\bg_2.jpg" />
+    <Content Include="Content\images\bg_3.jpg" />
+    <Content Include="Content\images\bg_4.jpg" />
+    <Content Include="Content\images\image_1.jpg" />
+    <Content Include="Content\images\image_2.jpg" />
+    <Content Include="Content\images\image_3.jpg" />
+    <Content Include="Content\images\image_4.jpg" />
+    <Content Include="Content\images\image_5.jpg" />
+    <Content Include="Content\images\image_6.jpg" />
+    <Content Include="Content\images\image_7.jpg" />
+    <Content Include="Content\images\image_8.jpg" />
+    <Content Include="Content\images\loc.png" />
+    <Content Include="Content\images\person_1.jpg" />
+    <Content Include="Content\images\person_2.jpg" />
+    <Content Include="Content\images\person_3.jpg" />
+    <Content Include="Content\images\person_4.jpg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Scripts\bootstrap.js" />
@@ -100,26 +130,26 @@
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
-    <Content Include="Views\config\css\ajax-loader.gif" />
-    <Content Include="Views\config\css\animate.css" />
-    <Content Include="Views\config\css\aos.css" />
-    <Content Include="Views\config\css\bootstrap-datepicker.css" />
-    <Content Include="Views\config\css\bootstrap.min.css" />
-    <Content Include="Views\config\css\bootstrap-reboot.css" />
-    <Content Include="Views\config\css\bootstrap\bootstrap-grid.css" />
-    <Content Include="Views\config\css\bootstrap\bootstrap-reboot.css" />
-    <Content Include="Views\config\css\mixins\_text-hide.css" />
-    <Content Include="Views\config\css\flaticon.css" />
-    <Content Include="Views\config\css\icomoon.css" />
-    <Content Include="Views\config\css\ionicons.min.css" />
-    <Content Include="Views\config\css\jquery.timepicker.css" />
-    <Content Include="Views\config\fonts\flaticon\font\flaticon.css" />
-    <Content Include="Views\config\fonts\flaticon\font\flaticon.html" />
-    <Content Include="Views\config\fonts\flaticon\font\Flaticon.svg" />
-    <Content Include="Views\config\fonts\icomoon\icomoon.svg" />
-    <Content Include="Views\config\fonts\ionicons\css\ionicons.min.css" />
-    <Content Include="Views\config\fonts\ionicons\fonts\ionicons.svg" />
-    <Content Include="Views\config\fonts\open-iconic\open-iconic.svg" />
+    <Content Include="Content\config\css\ajax-loader.gif" />
+    <Content Include="Content\config\css\animate.css" />
+    <Content Include="Content\config\css\aos.css" />
+    <Content Include="Content\config\css\bootstrap\bootstrap-datepicker.css" />
+    <Content Include="Content\config\css\bootstrap\bootstrap.min.css" />
+    <Content Include="Content\config\css\bootstrap-reboot.css" />
+    <Content Include="Content\config\css\bootstrap\bootstrap-grid.css" />
+    <Content Include="Content\config\css\bootstrap\bootstrap-reboot.css" />
+    <Content Include="Content\config\css\mixins\_text-hide.css" />
+    <Content Include="Content\config\css\flaticon.css" />
+    <Content Include="Content\config\css\icomoon.css" />
+    <Content Include="Content\config\css\ionicons.min.css" />
+    <Content Include="Content\config\css\jquery.timepicker.css" />
+    <Content Include="Content\config\fonts\flaticon\font\flaticon.css" />
+    <Content Include="Content\config\fonts\flaticon\font\flaticon.html" />
+    <Content Include="Content\config\fonts\flaticon\font\Flaticon.svg" />
+    <Content Include="Content\config\fonts\icomoon\icomoon.svg" />
+    <Content Include="Content\config\fonts\ionicons\css\ionicons.min.css" />
+    <Content Include="Content\config\fonts\ionicons\fonts\ionicons.svg" />
+    <Content Include="Content\config\fonts\open-iconic\open-iconic.svg" />
     <Content Include="Views\config\js\aos.js" />
     <Content Include="Views\config\js\bootstrap-datepicker.js" />
     <Content Include="Views\config\js\bootstrap.min.js" />
@@ -135,11 +165,11 @@
     <Content Include="Views\config\js\main.js" />
     <Content Include="Views\config\js\owl.carousel.min.js" />
     <Content Include="Views\config\js\popper.min.js" />
-    <Content Include="Views\config\css\magnific-popup.css" />
-    <Content Include="Views\config\css\open-iconic-bootstrap.min.css" />
-    <Content Include="Views\config\css\owl.carousel.min.css" />
-    <Content Include="Views\config\css\owl.theme.default.min.css" />
-    <Content Include="Views\config\css\style.css" />
+    <Content Include="Content\config\css\magnific-popup.css" />
+    <Content Include="Content\config\css\open-iconic-bootstrap.min.css" />
+    <Content Include="Content\config\css\owl.carousel.min.css" />
+    <Content Include="Content\config\css\owl.theme.default.min.css" />
+    <Content Include="Content\config\css\style.css" />
     <Content Include="Views\conteudo\html\about.html" />
     <Content Include="Views\conteudo\html\blog-single.html" />
     <Content Include="Views\conteudo\html\blog.html" />
@@ -148,6 +178,8 @@
     <Content Include="Views\conteudo\html\pricing.html" />
     <Content Include="Views\conteudo\html\project.html" />
     <Content Include="Views\conteudo\html\services.html" />
+    <Content Include="Content\css\menu.css" />
+    <Content Include="Content\css\style.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -163,23 +195,23 @@
   <ItemGroup>
     <Content Include="Views\web.config" />
     <Content Include="packages.config" />
-    <Content Include="Views\config\fonts\flaticon\font\Flaticon.eot" />
-    <Content Include="Views\config\fonts\flaticon\font\Flaticon.ttf" />
-    <Content Include="Views\config\fonts\flaticon\font\Flaticon.woff" />
-    <Content Include="Views\config\fonts\flaticon\font\_flaticon.scss" />
-    <Content Include="Views\config\fonts\flaticon\license\license.pdf" />
-    <Content Include="Views\config\fonts\icomoon\icomoon.eot" />
-    <Content Include="Views\config\fonts\icomoon\icomoon.ttf" />
-    <Content Include="Views\config\fonts\icomoon\icomoon.woff" />
-    <Content Include="Views\config\fonts\ionicons\css\_ionicons.scss" />
-    <Content Include="Views\config\fonts\ionicons\fonts\ionicons.eot" />
-    <Content Include="Views\config\fonts\ionicons\fonts\ionicons.ttf" />
-    <Content Include="Views\config\fonts\ionicons\fonts\ionicons.woff" />
-    <Content Include="Views\config\fonts\ionicons\fonts\ionicons.woff2" />
-    <Content Include="Views\config\fonts\open-iconic\open-iconic.eot" />
-    <Content Include="Views\config\fonts\open-iconic\open-iconic.otf" />
-    <Content Include="Views\config\fonts\open-iconic\open-iconic.ttf" />
-    <Content Include="Views\config\fonts\open-iconic\open-iconic.woff" />
+    <Content Include="Content\config\fonts\flaticon\font\Flaticon.eot" />
+    <Content Include="Content\config\fonts\flaticon\font\Flaticon.ttf" />
+    <Content Include="Content\config\fonts\flaticon\font\Flaticon.woff" />
+    <Content Include="Content\config\fonts\flaticon\font\_flaticon.scss" />
+    <Content Include="Content\config\fonts\flaticon\license\license.pdf" />
+    <Content Include="Content\config\fonts\icomoon\icomoon.eot" />
+    <Content Include="Content\config\fonts\icomoon\icomoon.ttf" />
+    <Content Include="Content\config\fonts\icomoon\icomoon.woff" />
+    <Content Include="Content\config\fonts\ionicons\css\_ionicons.scss" />
+    <Content Include="Content\config\fonts\ionicons\fonts\ionicons.eot" />
+    <Content Include="Content\config\fonts\ionicons\fonts\ionicons.ttf" />
+    <Content Include="Content\config\fonts\ionicons\fonts\ionicons.woff" />
+    <Content Include="Content\config\fonts\ionicons\fonts\ionicons.woff2" />
+    <Content Include="Content\config\fonts\open-iconic\open-iconic.eot" />
+    <Content Include="Content\config\fonts\open-iconic\open-iconic.otf" />
+    <Content Include="Content\config\fonts\open-iconic\open-iconic.ttf" />
+    <Content Include="Content\config\fonts\open-iconic\open-iconic.woff" />
     <Content Include="Views\config\scss\bootstrap\bootstrap-grid.scss" />
     <Content Include="Views\config\scss\bootstrap\bootstrap-reboot.scss" />
     <Content Include="Views\config\scss\bootstrap\bootstrap.scss" />
@@ -288,7 +320,6 @@
     <Folder Include="App_Data\" />
     <Folder Include="Views\conteudo\images\" />
     <Folder Include="Views\conteudo\js\" />
-    <Folder Include="Views\conteudo\scss\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
