--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -106,7 +106,8 @@
     <Content Include="Content\config\js\main.js" />
     <Content Include="Content\config\js\owl.carousel.min.js" />
     <Content Include="Content\config\js\popper.min.js" />
-    <Content Include="Content\css\home_slider.css" />
+    <Content Include="Content\css\contador.css" />
+    <Content Include="Content\css\home_carossel.css" />
     <Content Include="Content\images\bg_1.jpg" />
     <Content Include="Content\images\bg_2.jpg" />
     <Content Include="Content\images\bg_3.jpg" />
