--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Avaliacao.cs" />
     <Compile Include="Models\Comprador.cs" />
     <Compile Include="Models\Fornecedor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
