--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -110,12 +110,14 @@
     <Content Include="Content\config\js\main.js" />
     <Content Include="Content\config\js\owl.carousel.min.js" />
     <Content Include="Content\config\js\popper.min.js" />
+    <Content Include="Content\css\contato.css" />
     <Content Include="Content\css\footer.css" />
     <Content Include="Content\css\ftco.css" />
-    <Content Include="Content\css\home_slider.css" />
+    <Content Include="Content\css\carossel.css" />
     <Content Include="Content\css\cover_overlay.css" />
     <Content Include="Content\css\main.css" />
-    <Content Include="Content\css\pricing.css" />
+    <Content Include="Content\css\menu.css" />
+    <Content Include="Content\css\planos.css" />
     <Content Include="Content\css\util.css" />
     <Content Include="Content\images\bg_1.jpg" />
     <Content Include="Content\images\bg_2.jpg" />
@@ -265,39 +267,14 @@
     <Content Include="Content\config\fonts\ionicons\css\ionicons.min.css" />
     <Content Include="Content\config\fonts\ionicons\fonts\ionicons.svg" />
     <Content Include="Content\config\fonts\open-iconic\open-iconic.svg" />
-    <Content Include="Views\config\js\aos.js" />
-    <Content Include="Views\config\js\bootstrap-datepicker.js" />
-    <Content Include="Views\config\js\bootstrap.min.js" />
-    <Content Include="Views\config\js\google-map.js" />
-    <Content Include="Views\config\js\jquery-3.2.1.min.js" />
-    <Content Include="Views\config\js\jquery-migrate-3.0.1.min.js" />
-    <Content Include="Views\config\js\jquery.easing.1.3.js" />
-    <Content Include="Views\config\js\jquery.magnific-popup.min.js" />
-    <Content Include="Views\config\js\jquery.min.js" />
-    <Content Include="Views\config\js\jquery.stellar.min.js" />
-    <Content Include="Views\config\js\jquery.timepicker.min.js" />
-    <Content Include="Views\config\js\jquery.waypoints.min.js" />
-    <Content Include="Views\config\js\main.js" />
-    <Content Include="Views\config\js\owl.carousel.min.js" />
-    <Content Include="Views\config\js\popper.min.js" />
     <Content Include="Content\config\css\magnific-popup.css" />
     <Content Include="Content\config\css\open-iconic-bootstrap.min.css" />
     <Content Include="Content\config\css\owl.carousel.min.css" />
     <Content Include="Content\config\css\owl.theme.default.min.css" />
     <Content Include="Content\config\css\style.css" />
-    <Content Include="Views\config\js_login\main.js" />
-    <Content Include="Views\conteudo\html\about.html" />
-    <Content Include="Views\conteudo\html\blog-single.html" />
-    <Content Include="Views\conteudo\html\blog.html" />
-    <Content Include="Views\conteudo\html\contact.html" />
-    <Content Include="Views\conteudo\html\index.html" />
-    <Content Include="Views\conteudo\html\pricing.html" />
-    <Content Include="Views\conteudo\html\project.html" />
-    <Content Include="Views\conteudo\html\services.html" />
-    <Content Include="Content\css\menu.css" />
+    <Content Include="Content\js\login.js" />
     <Content Include="Content\css\style.css" />
     <Content Include="Content\images\payment.png" />
-    <Content Include="Views\conteudo\images\planos.jpg" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
@@ -417,7 +394,6 @@
     <Content Include="Views\config\scss\bootstrap\_utilities.scss" />
     <Content Include="Views\config\scss\bootstrap\_variables.scss" />
     <Content Include="Views\config\scss\style.scss" />
-    <Content Include="Views\conteudo\html\prepros-6.config" />
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
@@ -428,8 +404,6 @@
     <Content Include="Views\Home\SobreNos.cshtml" />
     <Content Include="Views\Home\Contato.cshtml" />
     <Content Include="Views\Home\Planos.cshtml" />
-    <Content Include="Views\Home\Projeto.cshtml" />
-    <Content Include="Views\Home\Servicos.cshtml" />
     <Content Include="Views\Shared\LoginLayout.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
     <None Include="Web.Debug.config">
@@ -441,9 +415,6 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\conteudo\images\" />
-    <Folder Include="Views\conteudo\js\" />
-    <Folder Include="Views\conteudo\scss\" />
     <Folder Include="Views\Fornecedor\" />
   </ItemGroup>
   <PropertyGroup>
