--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -107,6 +107,8 @@
     <Content Include="Content\config\js\jquery.stellar.min.js" />
     <Content Include="Content\config\js\jquery.timepicker.min.js" />
     <Content Include="Content\config\js\jquery.waypoints.min.js" />
+    <Content Include="Content\css\login.css" />
+    <Content Include="Content\css\style_login.css" />
     <Content Include="Content\js\main.js" />
     <Content Include="Content\config\js\owl.carousel.min.js" />
     <Content Include="Content\config\js\popper.min.js" />
