La - Refactor do Login - part 1

--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -130,7 +130,7 @@
     <Content Include="Content\images\bg_4.jpg" />
     <Content Include="Content\images\comprador.png" />
     <Content Include="Content\images\give-money.png" />
-    <Content Include="Content\images\Login.png" />
+    <Content Include="Content\images\fornecedor.png" />
     <Content Include="Content\images\LoginFornecedor.png" />
     <Content Include="Content\images\logo.png" />
     <Content Include="Content\images\logo2.png" />
