--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -109,6 +109,9 @@
     <Content Include="Content\config\js\jquery.waypoints.min.js" />
     <Content Include="Content\css\login.css" />
     <Content Include="Content\css\style_login.css" />
+    <Content Include="Content\images\fotopadrao.jpg" />
+    <Content Include="Content\js\update.js" />
+    <Content Include="Content\js\cadastro.js" />
     <Content Include="Content\js\main.js" />
     <Content Include="Content\config\js\owl.carousel.min.js" />
     <Content Include="Content\config\js\popper.min.js" />
@@ -419,6 +422,7 @@
     <Content Include="Views\Shared\LoginLayout.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Login\Cadastro.cshtml" />
+    <Content Include="Views\Login\Update.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -429,6 +433,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Views\Avaliacao\" />
+    <Folder Include="Views\Comprador\" />
     <Folder Include="Views\Fornecedor\" />
   </ItemGroup>
   <PropertyGroup>
