--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -107,6 +107,7 @@
     <Content Include="Content\config\js\jquery.stellar.min.js" />
     <Content Include="Content\config\js\jquery.timepicker.min.js" />
     <Content Include="Content\config\js\jquery.waypoints.min.js" />
+    <Content Include="Content\css\cadastro.css" />
     <Content Include="Content\css\login.css" />
     <Content Include="Content\css\style_login.css" />
     <Content Include="Content\images\fotopadrao.jpg" />
@@ -420,7 +421,7 @@
     <Content Include="Views\Home\SobreNos.cshtml" />
     <Content Include="Views\Home\Contato.cshtml" />
     <Content Include="Views\Home\Planos.cshtml" />
-    <Content Include="Views\Shared\LoginLayout.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Login\Cadastro.cshtml" />
     <Content Include="Views\Login\Update.cshtml" />
@@ -428,6 +429,7 @@
     <Content Include="Views\Comprador\CadastroPessoaJuridica.cshtml" />
     <Content Include="Views\Fornecedor\CadastroFornecedor.cshtml" />
     <Content Include="Views\Fornecedor\CadastroFuncionario.cshtml" />
+    <Content Include="Views\Shared\_LayoutCadastro.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
