--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -111,6 +111,7 @@
     <Content Include="Content\css\login.css" />
     <Content Include="Content\css\style_login.css" />
     <Content Include="Content\images\fotopadrao.jpg" />
+    <Content Include="Content\js\cadastro-pessoas.js" />
     <Content Include="Content\js\update.js" />
     <Content Include="Content\js\cadastro.js" />
     <Content Include="Content\js\main.js" />
