--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -443,6 +443,8 @@
     <Content Include="Views\Comprador\NovaSenha.cshtml" />
     <Content Include="Views\Shared\_LayoutCadastro.cshtml" />
     <Content Include="Views\Fornecedor\RestaurarSenha.cshtml" />
+    <Content Include="Views\Fornecedor\UpdateFuncionarioFornecedor.cshtml" />
+    <Content Include="Views\Fornecedor\listaFuncionario.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
