--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -112,6 +112,7 @@
     <Content Include="Content\css\style_login.css" />
     <Content Include="Content\images\fotopadrao.jpg" />
     <Content Include="Content\js\cadastro-pessoas.js" />
+    <Content Include="Content\js\RestaurarSenha.js" />
     <Content Include="Content\js\update.js" />
     <Content Include="Content\js\cadastro.js" />
     <Content Include="Content\js\main.js" />
