--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -109,6 +109,19 @@
     <Content Include="Content\config\js\jquery.waypoints.min.js" />
     <Content Include="Content\css\login.css" />
     <Content Include="Content\css\style_login.css" />
+    <Content Include="Content\images\about.jpg" />
+    <Content Include="Content\images\compradorIcon.png" />
+    <Content Include="Content\images\contato.jpg" />
+    <Content Include="Content\images\email.png" />
+    <Content Include="Content\images\ExperimenteAgora.jpg" />
+    <Content Include="Content\images\fornecedorIcon.png" />
+    <Content Include="Content\images\ranking.png" />
+    <Content Include="Content\images\search.png" />
+    <Content Include="Content\images\servicos.png" />
+    <Content Include="Content\images\Slide1.jpg" />
+    <Content Include="Content\images\Slide2.jpg" />
+    <Content Include="Content\images\team.jpg" />
+    <Content Include="Content\images\telefone.jpg" />
     <Content Include="Content\js\main.js" />
     <Content Include="Content\config\js\owl.carousel.min.js" />
     <Content Include="Content\config\js\popper.min.js" />
