--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -90,6 +90,32 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll" />
+    <Content Include="bin\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.xml" />
+    <Content Include="bin\Microsoft.Web.Infrastructure.dll" />
+    <Content Include="bin\roslyn\csc.exe" />
+    <Content Include="bin\roslyn\Microsoft.Build.Tasks.CodeAnalysis.dll" />
+    <Content Include="bin\roslyn\Microsoft.CodeAnalysis.CSharp.dll" />
+    <Content Include="bin\roslyn\Microsoft.CodeAnalysis.dll" />
+    <Content Include="bin\roslyn\Microsoft.CodeAnalysis.VisualBasic.dll" />
+    <Content Include="bin\roslyn\System.Collections.Immutable.dll" />
+    <Content Include="bin\roslyn\System.Reflection.Metadata.dll" />
+    <Content Include="bin\roslyn\vbc.exe" />
+    <Content Include="bin\roslyn\VBCSCompiler.exe" />
+    <Content Include="bin\SupplierRanking.dll" />
+    <Content Include="bin\SupplierRanking.pdb" />
+    <Content Include="bin\System.Web.Helpers.dll" />
+    <Content Include="bin\System.Web.Helpers.xml" />
+    <Content Include="bin\System.Web.Mvc.dll" />
+    <Content Include="bin\System.Web.Mvc.xml" />
+    <Content Include="bin\System.Web.Razor.dll" />
+    <Content Include="bin\System.Web.Razor.xml" />
+    <Content Include="bin\System.Web.Webpages.Deployment.dll" />
+    <Content Include="bin\System.Web.Webpages.Deployment.xml" />
+    <Content Include="bin\System.Web.Webpages.dll" />
+    <Content Include="bin\System.Web.Webpages.Razor.dll" />
+    <Content Include="bin\System.Web.Webpages.Razor.xml" />
+    <Content Include="bin\System.Web.Webpages.xml" />
     <Content Include="Content\config\css\bootstrap\main.css" />
     <Content Include="Content\config\css\bootstrap\util.css" />
     <Content Include="Content\config\fonts\flaticon\font\Flaticon.svg" />
@@ -107,7 +133,12 @@
     <Content Include="Content\config\js\jquery.stellar.min.js" />
     <Content Include="Content\config\js\jquery.timepicker.min.js" />
     <Content Include="Content\config\js\jquery.waypoints.min.js" />
+    <Content Include="Content\css\about.css" />
+    <Content Include="Content\css\cadastro.css" />
+    <Content Include="Content\css\contact.css" />
+    <Content Include="Content\css\contador.css" />
     <Content Include="Content\css\login.css" />
+    <Content Include="Content\css\navbar.css" />
     <Content Include="Content\css\style_login.css" />
     <Content Include="Content\images\about.jpg" />
     <Content Include="Content\images\compradorIcon.png" />
@@ -122,6 +153,8 @@
     <Content Include="Content\images\Slide2.jpg" />
     <Content Include="Content\images\team.jpg" />
     <Content Include="Content\images\telefone.jpg" />
+    <Content Include="Content\js\cadastro-pessoas.js" />
+    <Content Include="Content\js\cadastro.js" />
     <Content Include="Content\js\main.js" />
     <Content Include="Content\config\js\owl.carousel.min.js" />
     <Content Include="Content\config\js\popper.min.js" />
@@ -163,6 +196,8 @@
     <Content Include="Content\images\person_3.jpg" />
     <Content Include="Content\images\person_4.jpg" />
     <Content Include="Content\images\planos.jpg" />
+    <Content Include="Content\js\RestaurarSenha.js" />
+    <Content Include="Content\js\update.js" />
     <Content Include="Content\vendor\animate\animate.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.css" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.min.css" />
@@ -190,6 +225,9 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\montserrat\OFL.txt" />
     <Content Include="Global.asax" />
+    <Content Include="obj\Debug\SupplierRanking.csproj.FileListAbsolute.txt" />
+    <Content Include="obj\Debug\SupplierRanking.dll" />
+    <Content Include="obj\Debug\SupplierRanking.pdb" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Content\vendor\bootstrap\css\bootstrap-grid.css.map" />
@@ -267,9 +305,18 @@
     <Content Include="fonts\poppins\Poppins-SemiBoldItalic.ttf" />
     <Content Include="fonts\poppins\Poppins-Thin.ttf" />
     <Content Include="fonts\poppins\Poppins-ThinItalic.ttf" />
+    <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
+    <Content Include="obj\Debug\SupplierRanking.csprojResolveAssemblyReference.cache" />
+    <Content Include="bin\roslyn\Microsoft.CSharp.Core.targets" />
+    <Content Include="bin\roslyn\Microsoft.VisualBasic.Core.targets" />
+    <Content Include="bin\roslyn\VBCSCompiler.exe.config" />
+    <Content Include="bin\SupplierRanking.dll.config" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
+    <Content Include="Scripts\jquery.mask.js" />
+    <Content Include="Scripts\jquery.validate.min.js" />
+    <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
     <Content Include="Content\config\css\ajax-loader.gif" />
     <Content Include="Content\config\css\animate.css" />
@@ -298,11 +345,14 @@
     <Content Include="Content\js\login.js" />
     <Content Include="Content\css\style.css" />
     <Content Include="Content\images\payment.png" />
+    <Content Include="Views\config\css\css\bootstrap-reboot.css" />
+    <Content Include="Views\config\css\css\mixins\_text-hide.css" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\AvaliacaoController.cs" />
+    <Compile Include="Controllers\CategoriasController.cs" />
     <Compile Include="Controllers\CompradorController.cs" />
     <Compile Include="Controllers\FornecedorController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
@@ -311,8 +361,12 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\Avaliacao.cs" />
+    <Compile Include="Models\Categorias.cs" />
     <Compile Include="Models\Comprador.cs" />
     <Compile Include="Models\Fornecedor.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
+    <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -432,6 +486,28 @@
     <Content Include="Views\Shared\LoginLayout.cshtml" />
     <Content Include="Views\Login\Login.cshtml" />
     <Content Include="Views\Login\Cadastro.cshtml" />
+    <Content Include="Views\Comprador\CadastroPessoaFisica.cshtml" />
+    <Content Include="Views\Comprador\CadastroPessoaJuridica.cshtml" />
+    <Content Include="Views\Comprador\NovaSenha.cshtml" />
+    <Content Include="Views\Comprador\RestaurarSenha.cshtml" />
+    <Content Include="Views\Comprador\UpdatePessoaFisica.cshtml" />
+    <Content Include="Views\Comprador\UpdatePessoaJuridica.cshtml" />
+    <Content Include="Views\Comprador\UpdateSenha.cshtml" />
+    <Content Include="Views\config\css\.DS_Store" />
+    <Content Include="Views\config\fonts\.DS_Store" />
+    <Content Include="Views\Login\Update.cshtml" />
+    <Content Include="Views\Shared\_LayoutCadastro.cshtml" />
+    <Content Include="Views\Shared\_LayoutLogin.cshtml" />
+    <Content Include="Views\Avaliacao\RankingGeral.cshtml" />
+    <Content Include="Views\Avaliacao\RankingLista.cshtml" />
+    <Content Include="Views\Fornecedor\CadastroFornecedor.cshtml" />
+    <Content Include="Views\Fornecedor\CadastroFuncionario.cshtml" />
+    <Content Include="Views\Fornecedor\EnviarEmail.cshtml" />
+    <Content Include="Views\Fornecedor\listaFuncionario.cshtml" />
+    <Content Include="Views\Fornecedor\RestaurarSenha.cshtml" />
+    <Content Include="Views\Fornecedor\UpdateFornecedor.cshtml" />
+    <Content Include="Views\Fornecedor\UpdateFuncionarioFornecedor.cshtml" />
+    <Content Include="Views\Fornecedor\UpdateSenha.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -441,8 +517,9 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
-    <Folder Include="Views\Avaliacao\" />
-    <Folder Include="Views\Fornecedor\" />
+    <Folder Include="obj\Debug\TempPE\" />
+    <Folder Include="Views\conteudo\js\" />
+    <Folder Include="Views\conteudo\scss\" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
