--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -118,6 +118,7 @@
     <Content Include="bin\System.Web.Webpages.xml" />
     <Content Include="Content\config\css\bootstrap\main.css" />
     <Content Include="Content\config\css\bootstrap\util.css" />
+    <Content Include="Content\config\css\checkbox-home-logada.css" />
     <Content Include="Content\config\css\styleLogada.css" />
     <Content Include="Content\config\fonts\flaticon\font\Flaticon.svg" />
     <Content Include="Content\config\fonts\svg\icone.svg" />
