Val - Atualização das listas e views

--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -377,6 +377,7 @@
     <Content Include="Content\images\payment.png" />
     <Content Include="Views\config\css\css\bootstrap-reboot.css" />
     <Content Include="Views\config\css\css\mixins\_text-hide.css" />
+    <Content Include="Views\Avaliacao\RankingFiltro.cshtml" />
     <None Include="Views\Shared\Layout_logada.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
