--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -144,9 +144,12 @@
     <Content Include="Content\css\style_login.css" />
     <Content Include="Content\images\about.jpg" />
     <Content Include="Content\images\add-imagem.png" />
+    <Content Include="Content\images\avaliar.png" />
     <Content Include="Content\images\compradorIcon.png" />
     <Content Include="Content\images\contato.jpg" />
     <Content Include="Content\images\email.png" />
+    <Content Include="Content\images\email1.png" />
+    <Content Include="Content\images\endereco.png" />
     <Content Include="Content\images\ExperimenteAgora.jpg" />
     <Content Include="Content\images\filtro.png" />
     <Content Include="Content\images\fornecedor.png" />
@@ -162,6 +165,7 @@
     <Content Include="Content\images\luizao3.png" />
     <Content Include="Content\images\marcelo255.png" />
     <Content Include="Content\images\pesquisa.png" />
+    <Content Include="Content\images\phone.png" />
     <Content Include="Content\images\photo.png" />
     <Content Include="Content\images\ranking.png" />
     <Content Include="Content\images\search.png" />
@@ -378,6 +382,7 @@
     <Content Include="Views\config\css\css\bootstrap-reboot.css" />
     <Content Include="Views\config\css\css\mixins\_text-hide.css" />
     <Content Include="Views\Avaliacao\RankingFiltro.cshtml" />
+    <Content Include="Views\HomeLogada\Perfil.cshtml" />
     <None Include="Views\Shared\Layout_logada.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
