--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -116,6 +116,7 @@
     <Content Include="bin\System.Web.Webpages.Razor.dll" />
     <Content Include="bin\System.Web.Webpages.Razor.xml" />
     <Content Include="bin\System.Web.Webpages.xml" />
+    <Content Include="Content\config\css\avaliar-star.css" />
     <Content Include="Content\config\css\bootstrap\main.css" />
     <Content Include="Content\config\css\bootstrap\util.css" />
     <Content Include="Content\config\css\checkbox-home-logada.css" />
