Val - Atualizando telas de ranking e pesquisas - criei o model HomeLogada para facilitar

--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -404,6 +404,7 @@
     <Compile Include="Models\Categorias.cs" />
     <Compile Include="Models\Comprador.cs" />
     <Compile Include="Models\Fornecedor.cs" />
+    <Compile Include="Models\HomeLogada.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs" />
     <Compile Include="obj\Debug\TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs" />
@@ -532,8 +533,7 @@
     <Content Include="Views\Comprador\UpdatePessoaFisica.cshtml" />
     <Content Include="Views\Comprador\UpdatePessoaJuridica.cshtml" />
     <Content Include="Views\Comprador\UpdateSenha.cshtml" />
-    <Content Include="Views\Avaliacao\RankingGeral.cshtml" />
-    <Content Include="Views\Avaliacao\RankingLista.cshtml" />
+    <Content Include="Views\HomeLogada\RankingGeral.cshtml" />
     <Content Include="Views\config\css\.DS_Store" />
     <Content Include="Views\config\fonts\.DS_Store" />
     <Content Include="Views\Fornecedor\CadastroFornecedor.cshtml" />
@@ -551,7 +551,7 @@
     <Content Include="Views\Fornecedor\listaFornecedor.cshtml" />
     <Content Include="Views\Avaliacao\CadastrarAvaliacao.cshtml" />
     <Content Include="Views\Avaliacao\UpdateComentario.cshtml" />
-    <Content Include="Views\Avaliacao\RankingPremium.cshtml" />
+    <Content Include="Views\HomeLogada\RankingPremium.cshtml" />
     <Content Include="Views\HomeLogada\Pesquisa.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
