--- a/SupplierRanking/SupplierRanking.csproj
+++ b/SupplierRanking/SupplierRanking.csproj
@@ -127,6 +127,7 @@
     <Content Include="Content\config\js\bootstrap-datepicker.js" />
     <Content Include="Content\config\js\bootstrap.min.js" />
     <Content Include="Content\config\js\google-map.js" />
+    <Content Include="Content\config\js\carousel-perfil.js" />
     <Content Include="Content\config\js\jquery-3.2.1.min.js" />
     <Content Include="Content\config\js\jquery-migrate-3.0.1.min.js" />
     <Content Include="Content\config\js\jquery.animateNumber.min.js" />
